Bug 161309 - AutoFill handle does not update cursor right after merging cells
Summary: AutoFill handle does not update cursor right after merging cells
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Rafael Lima
URL:
Whiteboard: target:24.8.0
Keywords:
Depends on:
Blocks:
 
Reported: 2024-05-28 20:14 UTC by Rafael Lima
Modified: 2024-05-31 01:32 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rafael Lima 2024-05-28 20:14:55 UTC
When a range of cells is merged, the AutoFill handle (the small square in the bottom-right corner of the selected cell) does not update when the mouse rovers over it.

FTR, this is a minor issue I stumbled upon while fixing bug 161234.

Steps to reproduce:
1) Create a blank Calc document
2) Click any cell in the sheet, f.i. cell B2
3) Hover the mouse over the AutoFill handle; the mouse cursor will change to a cross, which is the expected behavior
4) Now select a range of cells, f.i. B2:B4
5) Right-click and choose "Merge cells"
6) Now hover the mouse over the AutoFill handle
7) Notice that the mouse cursor will NOT change to a cross; it should be a cross

This issue appears to be visual only, because if you click the handle and drag it, it will work. The problem is only with updating the mouse cursor.

Tested with:

Version: 24.2.3.2 (X86_64) / LibreOffice Community
Build ID: 420(Build:2)
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Ubuntu package version: 4:24.2.3-0ubuntu0.24.04.2
Calc: threaded
Comment 1 ady 2024-05-28 22:24:13 UTC Comment hidden (obsolete)
Comment 2 ady 2024-05-28 22:28:40 UTC
(In reply to ady from comment #1)
> This was not happening in LO 7.6 and older, so it is only since LO 24.2.

Hmm, I have to correct myself. Using the toolbar icons, it doesn't happen.

It only happens when using the context menu, and in older versions too.
Comment 3 ady 2024-05-28 22:33:18 UTC
(In reply to ady from comment #2)

> It only happens when using the context menu, and in older versions too.

I see the same behavior with LO 4.0, from the context menu only.

LO 3.3 does not include the "merge" action in the cell's context menu.
Comment 4 Rafael Lima 2024-05-29 13:05:08 UTC
Proposed patch here:
https://gerrit.libreoffice.org/c/core/+/168191
Comment 5 Commit Notification 2024-05-31 01:24:30 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a78e908093d5c5e1b1f1401b0863c98b9b523ea9

tdf#161309 Update AutoFill overlay after changes

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.