tdf#161309 Update AutoFill overlay after changes

Right after the cursor changes, the AutoFill overlay needs to be updated as well.

Change-Id: Ie82d36a3ff60635225c794650aaba6e6bfbed5ca
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168191
Reviewed-by: Rafael Lima <rafael.palma.lima@gmail.com>
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>